@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_css" meta_type="Stylesheets Registry">
-  <stylesheet title="" applyPrefix="False" authenticated="False"
+  <stylesheet title="" 
     cacheable="True" compression="safe" conditionalcomment="" cookable="True"
     enabled="True" expression="" id="facultyStaffDirectory.css" media="all"
     rel="stylesheet" rendering="link" insert-before="ploneCustom.css" />
